--- a/css/tree.css
+++ b/css/tree.css
@@ -5,6 +5,7 @@ html,body {
     height: 100%;
     width: 100%;
     background-color: #ffebfc;
+    transition: background-color 1s ease;
     margin: 0;
     align-items: flex-end;
 }
