--- a/css/tree.css
+++ b/css/tree.css
@@ -5,7 +5,7 @@ html,body {
     height: 100%;
     width: 100%;
     background-color: #ffebfc;
-    transition: background-color 1s ease;
+
     margin: 0;
     align-items: flex-end;
 }
@@ -17,7 +17,7 @@ html,body {
 
 /*缩放动画区*/
 body {
-    transition: transform 2s ease-in-out;
+    transition: transform 2s ease-in-out ,background-color 1s ease;
     transform-origin: bottom center;
 }
 
@@ -54,6 +54,12 @@ body {
 }
 .rightText {
     text-align: left;
+}
+
+#beian {
+    position: fixed;
+    bottom: 0;
+    left: 55%;
 }
 /*文字区结束*/
 
